# realtime-audio-acs

./: .env.embedding.example  .env.example  .gitignore  LICENSE  init.py  main.py  pyproject.toml  readme.md
ai_search/: step_1_interact_with_the_collection.py
plugins/: HotelSearch.py  hotel_search.py
